--- a/PortalCG/PortalCG/Views/Discipline/UploadFile.cshtml
+++ b/PortalCG/PortalCG/Views/Discipline/UploadFile.cshtml
@@ -8,10 +8,11 @@
 
 @using (Html.BeginForm("UploadFile", "Discipline", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    @Html.HiddenFor(m => m.IdDiscipline);
-    @Html.HiddenFor(m => m.IdCourse);
-    @Html.HiddenFor(m => m.CourseOptionRoute);
-    @Html.HiddenFor(m => m.OptionRoute);
+    @Html.HiddenFor(m => m.IdDiscipline)
+    @Html.HiddenFor(m => m.IdCourse)
+    @Html.HiddenFor(m => m.CourseOptionRoute)
+    @Html.HiddenFor(m => m.OptionRoute)
+    @Html.HiddenFor(m => m.IdTeacher)
     <div class="portlet light bordered">
         <div class="portlet-title">
             <div class="caption">
