--- a/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
+++ b/PortalCG/PortalCG/Views/Shared/_DisciplinePartial.cshtml
@@ -29,7 +29,7 @@
                     {
                         <a href="@Url.Action("AllTeachers","Discipline", new { id = Model.Id})" class="btn blue btn-xs">Professores</a>
                     }
-                    <a href="@Url.Action("UploadFile", "Discipline", new { idDiscipline = Model.Id, disciplineName = Model.Nome, courseOption = Model.CourseOptionRoute, idCourse = Model.IdCourse, option = Model.OptionRoute })" class="btn blue btn-xs">Arquivos</a>
+                    <a href="@Url.Action("UploadFile", "Discipline", new { idDiscipline = Model.Id, disciplineName = Model.Nome, courseOption = Model.CourseOptionRoute, idCourse = Model.IdCourse, option = Model.OptionRoute, idTeacher = Model.IdTeacher })" class="btn blue btn-xs">Arquivos</a>
                 </div>
             </div>
         </div>
